--- a/manifest.yml
+++ b/manifest.yml
@@ -3,7 +3,7 @@ applications:
   - buildpack: https://github.com/cloudfoundry/java-buildpack.git
     name: frontend
     memory: 2048m
-    path: target/frontend-0.0.1-SNAPSHOT.jar
+    path: frontend-prebuild.jar
     random-route: true
     services:
       - config-service
